C2: assert triggered in BoolTest::BoolTest

XMLWordPrintable

    • b24

      # Internal Error (/home/hamlin/workspace/repos/github/jdk-master-aot/src/hotspot/share/opto/subnode.hpp:325), pid=635310, tid=635332
      # assert((btm & unsigned_compare) == 0) failed: unsupported



      Current CompileTask:
      C2:6455 957 b 4 compiler.c2.irTests.TestVectorConditionalMove::testCMoveUIGTforF (65 bytes)

      Stack: [0x00007fc4d3f00000,0x00007fc4d4000000], sp=0x00007fc4d3ff9b20, free space=998k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1e7d220] VTransformBoolVectorNode::print_spec() const+0x80 (subnode.hpp:325)
      V [libjvm.so+0x1e81e98] VTransformNode::print() const+0x168 (vtransform.cpp:1352)
      V [libjvm.so+0x1e8286b] VTransformGraph::print_schedule() const+0x7b (vtransform.cpp:1319)
      V [libjvm.so+0x1e8423e] VTransformGraph::schedule()+0xa3e (vtransform.cpp:156)
      V [libjvm.so+0x1cba5fb] SuperWord::do_vtransform() const [clone .part.0]+0x62b (vtransform.hpp:254)
      V [libjvm.so+0x1cc0203] SuperWord::transform_loop()+0x33 (superword.cpp:413)
      V [libjvm.so+0x15dc947] PhaseIdealLoop::auto_vectorize(IdealLoopTree*, VSharedData&)+0x3a7 (loopopts.cpp:4501)
      V [libjvm.so+0x15bced3] PhaseIdealLoop::build_and_optimize()+0xfb3 (loopnode.cpp:5293)
      V [libjvm.so+0xbcf600] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x4e0 (loopnode.hpp:1233)
      V [libjvm.so+0xbc655b] Compile::optimize_loops(PhaseIterGVN&, LoopOptsMode)+0xab (compile.cpp:2262)
      V [libjvm.so+0xbc94eb] Compile::Optimize()+0xccb (compile.cpp:2511)
      V [libjvm.so+0xbcc693] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x2023 (compile.cpp:860)
      V [libjvm.so+0x9f8045] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x485 (c2compiler.cpp:147)
      V [libjvm.so+0xbdc5e2] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xd62 (compileBroker.cpp:2345)
      V [libjvm.so+0xbdd690] CompileBroker::compiler_thread_loop()+0x6f0 (compileBroker.cpp:1989)
      V [libjvm.so+0x11328df] JavaThread::thread_main_inner()+0x12f (javaThread.cpp:772)
      V [libjvm.so+0x1d4dbba] Thread::call_run()+0xba (thread.cpp:242)
      V [libjvm.so+0x17f9486] thread_native_entry(Thread*)+0x116 (os_linux.cpp:879)

            Assignee:
            Hamlin Li
            Reporter:
            Hamlin Li
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: