8371297: C2: assert triggered in BoolTest::BoolTest

Reviewed-by: dlong, luhenry, epeter